--- a/gallery-app/main/package.json
+++ b/gallery-app/main/package.json
@@ -25,7 +25,6 @@
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.8.1",
-    "hmpl-js": "^2.2.1",
     "hmpl-loader": "^0.0.5",
     "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.5.3",
@@ -35,5 +34,8 @@
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
+  },
+  "dependencies": {
+    "hmpl-js": "^2.2.3"
   }
 }
